--- a/云开发项目/app.json
+++ b/云开发项目/app.json
@@ -18,7 +18,8 @@
         "pages/admin/manage-site/manage-site",
         "pages/admin/manage-site/getpoint/getpoint",
         "pages/admin/adminmanage/adminmanage",
-        "pages/admin/manage-admin/manage-admin"
+        "pages/admin/manage-admin/manage-admin",
+        "pages/chat/chat"
     ],
     "window": {
         "backgroundTextStyle": "light",
