--- a/静态项目/app.json
+++ b/静态项目/app.json
@@ -2,15 +2,23 @@
     "pages": [
         "pages/home/home",
         "pages/home/introduction/introduction",
+        "pages/home/book/book",
+        "pages/home/banshi/book",
+        "pages/home/guanwang/book",
+        "pages/home/xinwenwang/book",
+        "pages/home/zhaosheng/book",
         "pages/map/map",
         "pages/map/instruction/instruction",
         "pages/map/search/search",
+        "pages/map/allMap/allMap",
         "pages/site/site",
         "pages/school/school",
         "pages/school/guidance/guidance",
         "pages/more/more",
         "pages/more/statement/statement",
-        "pages/home/pano/pano"
+        "pages/home/pano/pano",
+        "pages/chat/chat",
+        "pages/construct/construct"
     ],
     "window": {
         "backgroundTextStyle": "light",
@@ -18,40 +26,7 @@
         "navigationBarTitleText": "桂院校园导航",
         "navigationBarTextStyle": "black"
     },
-    "tabBar": {
-        "list": [
-            {
-                "selectedIconPath": "/images/tabbar/icon_map_HL.png",
-                "iconPath": "/images/tabbar/icon_map.png",
-                "pagePath": "pages/map/map",
-                "text": "地图"
-            },
-            {
-                "selectedIconPath": "/images/tabbar/icon_collection_HL.png",
-                "iconPath": "/images/tabbar/icon_collection.png",
-                "pagePath": "pages/site/site",
-                "text": "地点汇总"
-            },
-            {
-                "selectedIconPath": "/images/tabbar/icon_home_HL.png",
-                "iconPath": "/images/tabbar/icon_home.png",
-                "pagePath": "pages/home/home",
-                "text": "首页"
-            },
-            {
-                "selectedIconPath": "/images/tabbar/icon_school_HL.png",
-                "iconPath": "/images/tabbar/icon_school.png",
-                "pagePath": "pages/school/school",
-                "text": "校园指南"
-            },
-            {
-                "selectedIconPath": "/images/tabbar/icon_more_HL.png",
-                "iconPath": "/images/tabbar/icon_more.png",
-                "pagePath": "pages/more/more",
-                "text": "更多"
-            }
-        ]
-    },
+
     "style": "v2",
     "sitemapLocation": "sitemap.json",
     "lazyCodeLoading": "requiredComponents",
